# aether-renderer-core

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: example_config.json  sacred-stars-demo.webm
scripts/: benchmark.py
src/: config.rs  input.rs  lib.rs  main.rs  report.rs  utils.rs
src/ffmpeg/: gif.rs  mod.rs  video.rs
src/utils/: collect_frames.rs  mod.rs  unzip_frames.rs
tests/: benchmark.rs  integration.rs  test_config.rs  test_invalid_inputs.rs  test_render_report.rs  test_utils.rs  test_weird_output_filenames.rs
