[package]
name = "aether-renderer-core"
version = "0.1.4"
edition = "2021"
description = "A sacred Rust-based CLI for rendering transparent WebM/MP4/GIF from PNG sequences"
license = "MIT"
authors = ["Siria <siria@sacred-ai.com>"]
homepage = "https://sacred-ai.com/about/aetherrenderer"
repository = "https://github.com/madspaaskesen/aether-renderer-core"
readme = "README.md"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zip = "0.6"
tempfile = "3.8"
