[package]
name = "aether-renderer-core"
version = "0.1.8"
edition = "2021"
description = "A sacred Rust-based CLI for rendering transparent WebM/MP4/GIF from PNG sequences"
license = "MIT"
authors = ["Mads Paaskesen <madspaaskesen@gmail.com>"]
homepage = "https://sacred-ai.com/about/aetherrenderer"
repository = "https://github.com/madspaaskesen/aether-renderer-core"
readme = "README.md"
documentation = "https://docs.rs/aether-renderer-core"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
exclude = ["Cargo.toml.orig"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zip = "0.6"
tempfile = "3.8"
