[package]
name = "aether-renderer-core"
version = "0.4.0"
edition = "2021"
description = "A sacred Rust-based CLI for rendering transparent WebM/MP4/GIF from PNG sequences"
license = "MIT"
authors = ["Mads Paaskesen <madspaaskesen@gmail.com>"]
homepage = "https://sacred-ai.com/about/aetherrenderer"
repository = "https://github.com/madspaaskesen/aether-renderer-core"
readme = "README.md"
documentation = "https://docs.rs/aether-renderer-core"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
exclude = [
    "*.DS_Store",
    "dist/",
    "release-*",
    "*.zip",
    "*.png",
    "*.dmg",
    "Cargo.toml.orig"
]

[lib]
name = "aether_renderer_core"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zip = "0.6"
tempfile = "3.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
indicatif = "0.17"
